git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@599 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/slides/2012-08-29-IMITATOR-FM/2012-08-29-IMITATOR-FM.tex
+++ b/slides/2012-08-29-IMITATOR-FM/2012-08-29-IMITATOR-FM.tex
@@ -1385,7 +1385,50 @@
 \section*{Experiments}
 \begin{frame}
 \frametitle{Experiments}
-
+\scalebox{0.7}{
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+\hline
+ Case study             & $|\mathcal{A}|$& $|X|$ & $|P|$ & $|S|$        & $|T|$         & $n$   &
+$|K|$ & t               \\
+\hline
+jobshop $2\times 3$               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
+& 288.2/450.4   \\
+\hline
+jobshop $2\times 5$               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
+& 288.2/450.4   \\
+\hline
+jobshop $3\times 5$               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
+& 288.2/450.4   \\
+\hline
+cpr08 \cite{cpr08}               & 4 & 6         & 8     & 676/3194      & 886/3931      & 15/15 & 15/10
+& 288.2/450.4   \\
+\hline
+hppr10 \cite{LPPRC10}             & 3 & 4 &  9& 60/103    & 103/686               & 10/10 & 7/5 &
+2.10/11.7\\
+\hline
+Task chains \cite{SGL97} & 8 & 15 & 18 & 215/1364 & 264/1363 & 15/15 &
+17/17 & 85.3/270.6\\
+\hline
+%Astrium (RM) \cite{soulat12}       & 5 & 7         & 10    & 63/63         & 62/62         & 32/32 &
+%12/12 & 1.10/0.93       \\
+%\hline
+RM 1            & 5 & 7         & 10    & 205/805       & 225/837       & 40/40 & 11/11 & 15.6/28.5  \\
+\hline
+RM 2            & 5 & 7         & 10    & 208/1174      & 228/1269      & 42/42 & 12/12 & 10.7/41.0  \\
+\hline
+RM 3            & 5 & 7         & 10    & 49/82         & 51/81         & 15/15 & 12/12 & 1.03/1.75  \\
+\hline
+%Astrium (EDF)   & 5 & 10        & 13    & 63/63         & 62/62         & 32/32 & 13/13 &
+%2.42/2.30       \\
+%\hline
+EDF 1           & 5 & 10        & 13    & 76/415        & 91/454 & 31/31        & 20/20 & 66.1/288.2  \\
+\hline
+EDF 2           & 5 & 10        & 13    & 254/642       & 326/817       & 47/47 & 12/12 & 9.9/23.2  \\
+\hline
+EDF 3           & 5 & 10&  13   & 31/43         & 33/45         & 9/9   & 13/14 & 1.09/1.57  \\
+\hline
+\end{tabular}
+}
 
 
 \end{frame}
