--- a/slides/2012-08-29-IMITATOR-FM/biblioIMI.bib
+++ b/slides/2012-08-29-IMITATOR-FM/biblioIMI.bib
@@ -122,6 +122,16 @@
 	lipn-time = {ant},
 }
 
+@article{bhz08,
+	Author = {R. Bagnara and P. M. Hill and E. Zaffanella},
+	Title = {The {Parma Polyhedra Library}: Toward a Complete Set of Numerical Abstractions for the Analysis and Verification of Hardware and Software Systems},
+	Journal = {Science of Computer Programming},
+	Volume = 72,
+	Number = {1--2},
+	Pages = {3--21},
+	Year = 2008,
+}
+
 
 @inproceedings{FK11,
   	author =	{Fribourg, Laurent and K{\"u}hne, Ulrich},
